--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,15 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # End of https://www.gitignore.io/api/unity
